[package]
name = "raft-again"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "sync"] }
rand = "0.8.5"
async-recursion = "1.1.1"
axum = { version = "0.7.5", features = ["json", "macros", "tokio"]}
anyhow = "1.0.86"
bytes = "1.6.0"
