[package]
name = "raft-again"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "sync"] }
rand = "0.8.5"
async-recursion = "1.1.1"
axum = { version = "0.7.5", features = ["json", "macros", "tokio"]}
anyhow = "1.0.86"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
async-trait = "0.1.83"
reqwest = { version = "0.12.9", features = ["json"] }
thiserror = "2.0.9"
tracing = "0.1.41"
chrono = { version = "0.4.39", features = ["serde"] }
backoff = { version = "0.4.0", features = ["futures"] }
axum-server = "0.7.1"
